[package]
name = "scalyr"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.31"
worker = "0.0.18"
flate2 = "1.0.28"
nano-id = { version = "0.3.3", features = ["wasm"] }
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["raw_value"] }
tokio = { version = "1.27", features = ["io-util", "time"] }

[profile.release]
lto = true
strip = true
codegen-units = 1